--- a/package.json
+++ b/package.json
@@ -8,12 +8,35 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~41.0.1",
-    "expo-status-bar": "~1.0.4",
+    "@react-native-async-storage/async-storage": "^1.15.3",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/drawer": "^5.12.5",
+    "@react-navigation/material-top-tabs": "^5.3.15",
+    "@react-navigation/native": "^5.9.4",
+    "@react-navigation/stack": "^5.14.4",
+    "axios": "^0.21.1",
+    "expo": "~40.0.0",
+    "expo-image-picker": "^10.1.4",
+    "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-dropdown-picker": "^4.0.2",
+    "react-native-elements": "^3.3.2",
+    "react-native-gesture-handler": "~1.8.0",
+    "react-native-gifted-chat": "^0.16.3",
+    "react-native-radio-buttons-group": "^2.2.1",
+    "react-native-reanimated": "^2.1.0",
+    "react-native-safe-area-view": "^1.1.1",
+    "react-native-screens": "~2.15.2",
+    "react-native-simple-radio-button": "^2.7.4",
+    "react-native-tab-view": "^2.16.0",
+    "react-native-text-input-mask": "^3.1.4",
+    "react-native-vector-icons": "^8.1.0",
+    "react-native-web": "~0.13.12",
+    "react-redux": "^7.2.3",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
