--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "react-native-gifted-chat": "^0.16.3",
     "react-native-radio-buttons-group": "^2.2.1",
     "react-native-reanimated": "^2.1.0",
-    "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "~2.15.2",
     "react-native-simple-radio-button": "^2.7.4",
     "react-native-tab-view": "^2.16.0",
@@ -36,6 +35,7 @@
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.3",
     "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
